[package]
name = "starknet-hint-vrf"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
cairo-lang-runner = { path = "../cairo/crates/cairo-lang-runner" }
stark-vrf = { path = "..//stark-vrf" }
starknet-ff = "0.3.7"
num-traits = { version = "0.2", default-features = false }
